--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Profile</title>
 	<link href="style/normalize.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Pacifico|Righteous|Baloo Thambi|Magra|Oswald|Comfortaa" rel="stylesheet">
-	<link href="style.css" rel="stylesheet">
+	<link href="styles.css" rel="stylesheet">
 </head>
 <body>
   <div id="nav1">
@@ -14,7 +14,7 @@
 			</div>
     <ul class="nav2">
 		<li>
-			<a href="index.html">Home</a>
+			<a href="gallery.html">Home</a>
 		</li>
 		<li>
 			<a href="gallery.html">Gallery</a>
@@ -22,7 +22,7 @@
 	</ul>
     </div>
 	<div id="wrap">
-		<img alt="profile" class="profileimg" src="img/boo.png">
+		<img alt="profile" class="profile-img" src="img/boo.png">
 		<h1>Bimal Rai</h1>
 		<h4>I am from Dharan, Nepal.</h4>
 	</div>
@@ -67,7 +67,7 @@
 	</div>
 	<footer id="foot">
 		<div class="socialpic">
-			<a href="github.com" target="_blank"><img alt="git" class="social" src="img/git.png"></a> 
+			<a href="https://github.com/rainuto" target="_blank"><img alt="git" class="social" src="img/git.png"></a> 
       <a href="facebook.com"><img alt="fb" class="social" src="img/face1.png"></a> 
       <a href="twitter"><img alt="tw" class="social" src="img/twi1.png"></a>
       <a href="pintrest"><img alt="pin" class="social" src="img/pin.png"></a>
