--- a/index.html
+++ b/index.html
@@ -1,78 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>Profile</title>
-	<link href="style/normalize.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Pacifico|Righteous|Baloo Thambi|Magra|Oswald|Comfortaa" rel="stylesheet">
-	<link href="styles.css" rel="stylesheet">
-</head>
-<body>
-  <div id="nav1">
-			<div class="name">
-				BIMAL RAI
-			</div>
-    <ul class="nav2">
-		<li>
-			<a href="gallery.html">Home</a>
-		</li>
-		<li>
-			<a href="gallery.html">Gallery</a>
-		</li>
-	</ul>
-    </div>
-	<div id="wrap">
-		<img alt="profile" class="profile-img" src="img/boo.png">
-		<h1>Bimal Rai</h1>
-		<h4>I am from Dharan, Nepal.</h4>
-	</div>
-  
-	<section id="Main">
-    <div class="pro">
-		<h3>PROFILE</h3>
-      </div>
-		<div id="sec1">
-			<h2 class="head">Background</h2>
-			<p>Hi, my name is <span>Bimal Rai</span>. Making my way to being a good front-end web developer. Building a good website has always been my passion, it has always suprise me in way that amazing things in life happens every now and then. Well i am looking forward to build my career in it. So i'll give my 100% to be a better front-end web developer. Photography, Football, Archery are some of the activity that i love.</p>
-		</div>
-		<div id="sec2">
-			<h2 class="head">Goals</h2>
-			<p>My goals are to keep challenging myself to keep doing better in every aspect of life. So right now i pursuing to become a good front-end developer, therefore i want to be best in,</p>
-			<ul class="list">
-				<li>
-					<a href="#">HTML</a>
-				</li>
-				<li>
-					<a href="#">CSS</a>
-				</li>
-				<li>
-					<a href="#">JAVA.S</a>
-				</li>
-				<li>
-					<a href="#">SASS</a>
-				</li>
-			</ul>
-		</div>
-	</section>
-  
-	<div id="content">
-		<div class="gallery">
-      <h2>Gallery</h2>
-    </div>
-		<img src="img/p7.jpg" alt="forest" class="pic">
-    <img src="img/p8.jpg" alt="f40" class="pic">
-    <img src="img/p9.jpg" alt="owl" class="pic">
-    <img src="img/p10.jpg" alt="potrait" class="pic">
+  <meta charset="utf-8">
+  <title>Bimal Rai's Profile</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Pacifico|Righteous|BalooThambi|Magra|Oswald|Comfortaa" rel="stylesheet">
+  </head>
+  <body>
 
-	</div>
-	<footer id="foot">
-		<div class="socialpic">
-			<a href="https://github.com/rainuto" target="_blank"><img alt="git" class="social" src="img/git.png"></a> 
-      <a href="facebook.com"><img alt="fb" class="social" src="img/face1.png"></a> 
-      <a href="twitter"><img alt="tw" class="social" src="img/twi1.png"></a>
-      <a href="pintrest"><img alt="pin" class="social" src="img/pin.png"></a>
-	    <p class="copyrights">&copy; BIMAL RAI 2016.</p>
-      </div>
-	</footer>
-</body>
-</html>
+    <div class="main-nav">
+        <ul class="nav">
+          <li class="name">Bimal Rai</li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Experience</a></li>
+		  <li><a href="gallery.html">Gallery</a></li>
+        </ul>
+    </div>
+
+    <header>
+      <img src="img/boo.png" alt="My Boxer Pic" class="profile-image">
+      <h1 class="tag name">Bimal Rai, Here.</h1>
+      <p class="tag location">From, Dharan-15, Nepal.</p>
+    </header>
+
+    <main class="flex">
+      <div class="card">
+        <h2>Background</h2>
+        <p>Hi, my name is <span>Bimal Rai</span>. Making my way to being a good front-end web developer. Building a good website has always been my passion, it has always suprise me in way that amazing things in life happens every now and then. Well i am looking forward to build my career in it. So i'll give my 100% to be a better front-end web developer. Photography, Football, Archery are hobbies.
+      </div> 
+
+      <div class="card">
+        <h2>Goals</h2>
+        <p>My goals are to keep challenging myself to keep doing better in every aspect of life. So right now i pursuing to become a good front-end developer, therefore i want to be best in,</p>
+        <ul class="skills">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Ruby</li>
+          <li>Rails</li>
+        </ul>
+        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+      </div> 
+
+    </main>
+    <footer>
+      <ul>
+        <li><a href="#" class="social twitter">Twitter</a></li>
+        <li><a href="#" class="social linkedin">LinkedIn</a></li>
+        <li><a href="#" class="social github">Github</a></li>
+      </ul>
+      <p class="copyright">Copyright 2017, Bimal Rai</p>
+    </footer>
+  </body>
+  </html>
