--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,9 +13,8 @@
     <div class="main-nav">
         <ul class="nav">
           <li class="name">Bimal Rai</li>
-          <li><a href="#">Home</a></li>
+          <li><a href="index.html" target="_blank">Home</a></li>
           <li><a href="#">Experience</a></li>
-		  <li><a href="gallery.html">Gallery</a></li>
         </ul>
     </div>
 
