--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <ul class="nav">
           <li class="name">Bimal Rai</li>
           <li><a href="index.html" target="_blank">Home</a></li>
-          <li><a href="#">Experience</a></li>
+          <li><a href="#card">Experience</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="img/me.png" alt="My Pic" class="profile-image">
+      <img src="img/boo.png" alt="My Boxer Pic" class="profile-image">
       <h1 class="tag name">Bimal Rai, Here.</h1>
       <p class="tag location">From, Dharan-15, Nepal.</p>
     </header>
@@ -27,7 +27,7 @@
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>Hi, my name is <span>Bimal Rai</span>. Making my way to being a good front-end web developer. Building a good website has always been my passion, it has always suprise me in way that amazing things in life happens every now and then. Well i am looking forward to build my career in it. So i'll give my 100% to be a better front-end web developer. Photography, Football, Archery are my hobbies.
+        <p>Hi, my name is <span>Bimal Rai</span>. Making my way to being a good front-end web developer. Building a good website has always been my passion, it has always suprise me in way that amazing things in life happens every now and then. Well i am looking forward to build my career in it. So i'll give my 100% to be a better front-end web developer. Photography, Football, Archery are hobbies.
       </div> 
 
       <div class="card">
@@ -47,7 +47,7 @@
     <footer>
       <ul>
         <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social facebook">Facebook</a></li>
+        <li><a href="#" class="social linkedin">LinkedIn</a></li>
         <li><a href="#" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2017, Bimal Rai</p>
